--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,25 +1,47 @@
 .footer {
-  text-align: center;
-  background-color: #333;
-  color: white;
-  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: #000;
+  color: #fff;
+  padding: 20px 100px;
+  width: 100%;
+  font-size: 14px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
 
-  .icons {
-    margin-top: 1rem;
+.footer-left {
+  text-align: left;
+  font-family: "Arial", sans-serif;
+  margin-left: 30px;
+}
 
-    a {
-      margin: 0 0.5rem;
+.footer-left p {
+  margin: 0;
+  line-height: 1.5;
+}
 
-      img {
-        width: 40px;
-        height: 40px;
-        transition: transform 0.3s;
-      }
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: 30px;
+  gap: 10px;
+}
 
-      img:hover,
-      img:focus {
-        transform: scale(1.1);
-      }
-    }
-  }
+.footer-right .logos {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-logo {
+  width: 40px;
+  height: 30px;
+}
+
+.underline {
+  width: 100%;
+  height: 3px;
+  background-color: #9c27b0;
+  margin-top: 5px;
 }
