--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,8 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 30px;
-  position: sticky;
+  padding: 0px 10px;
   top: 0;
 }
 
@@ -26,7 +25,7 @@
   text-decoration: none;
   font-size: 16px;
   position: relative;
-  padding: 5px 5px;
+  padding: 10px 10px;
   transition: color 0.3s ease;
 }
 
@@ -50,6 +49,7 @@
 
 .active {
   color: #9c27b0;
+  font-weight: bold;
   background-color: #272727;
   border-bottom: 2px solid #892fb0;
 }
