--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,13 +1,18 @@
 .footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #000;
   color: #fff;
   padding: 20px 100px;
-  width: 100%;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-size: 14px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+  box-sizing: border-box;
 }
 
 .footer-left {
@@ -36,7 +41,7 @@
 
 .footer-logo {
   width: 40px;
-  height: 30px;
+  height: auto;
 }
 
 .underline {
