--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -13,40 +13,40 @@
   font-size: 14px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   box-sizing: border-box;
-}
 
-.footer-left {
-  text-align: left;
-  font-family: "Arial", sans-serif;
-  margin-left: 30px;
-}
+  .footerLeft {
+    text-align: left;
+    font-family: "Arial", sans-serif;
+    margin-left: 30px;
 
-.footer-left p {
-  margin: 0;
-  line-height: 1.5;
-}
+    p {
+      margin: 0;
+      line-height: 1.5;
+    }
+  }
 
-.footer-right {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-right: 30px;
-  gap: 10px;
-}
+  .footerRight {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 30px;
+    gap: 10px;
 
-.footer-right .logos {
-  display: flex;
-  gap: 20px;
-}
+    .logos {
+      display: flex;
+      gap: 20px;
+    }
 
-.footer-logo {
-  width: 40px;
-  height: auto;
-}
+    .footerLogo {
+      width: 40px;
+      height: auto;
+    }
+  }
 
-.underline {
-  width: 100%;
-  height: 3px;
-  background-color: #9c27b0;
-  margin-top: 5px;
+  .underline {
+    width: 100%;
+    height: 3px;
+    background-color: #9c27b0;
+    margin-top: 5px;
+  }
 }
