--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ main {
 }
 
 body {
-  background-image: url("../assets/images/background.jpg");
+  background-image: url("src/assets/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
