--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -21,32 +21,19 @@
   .nav {
     display: flex;
 
-    a {
+    a,
+    .dropbtn {
       color: #fff;
       text-decoration: none;
       font-size: 16px;
       position: relative;
       padding: 10px;
-      transition: color 0.3s ease;
+      cursor: pointer;
       display: inline-block;
+      text-align: center;
 
       &:hover {
         background-color: #272727;
-      }
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 0;
-        height: 2px;
-        background-color: #272626;
-        transition: width 0.3s ease;
-      }
-
-      &:hover::after {
-        width: 100%;
       }
     }
 
@@ -54,7 +41,46 @@
       color: white;
       font-weight: bold;
       background-color: #272727;
-      border-bottom: 2px solid #892fb0;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #892fb0;
+      }
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+
+      .dropdownContent {
+        display: none;
+        position: absolute;
+        text-align: center;
+        background-color: #000;
+        min-width: 130px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+
+        a {
+          color: white;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+
+          &:hover {
+            background-color: #272727;
+          }
+        }
+      }
+
+      &:hover .dropdownContent {
+        display: block;
+      }
     }
   }
 }
