Implement SearchBar design

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,8 @@
 
 main {
   flex-grow: 1;
-  margin-top: 80px;
+  margin: 50px 0;
   margin-bottom: 80px;
-  padding: 20px;
   overflow-x: hidden;
   width: 100%;
 }
