Update Categories design

--- a/src/elements/categories.m.scss
+++ b/src/elements/categories.m.scss
@@ -23,7 +23,7 @@
       border: 1px solid #fff;
       border-radius: 10px;
       padding: 20px;
-      width: 200px;
+      width: 250px;
       height: 150px;
       display: flex;
       flex-direction: column;
@@ -33,22 +33,12 @@
       cursor: pointer;
       transition: all 0.3s ease;
       color: #808080;
-
-      &.left {
-        box-shadow: -4px 5px 0px 0px rgba(255, 255, 255, 1);
-      }
-
-      &.middle {
-        box-shadow: 0px 5px 0px 0px rgba(255, 255, 255, 1);
-      }
-
-      &.right {
-        box-shadow: 4px 5px 0px 0px rgba(255, 255, 255, 1);
-      }
+      box-shadow: 0px 5px 0px 0px rgba(255, 255, 255, 1);
 
       &:hover {
         background-color: #272727;
         border-color: #892fb0;
+        box-shadow: 0px 5px 0px 0px rgba(137, 47, 176);
       }
 
       .icon {
