--- a/src/components/pages/home/homeComponents/categories.m.scss
+++ b/src/components/pages/home/homeComponents/categories.m.scss
@@ -44,6 +44,12 @@
       .icon {
         font-size: 40px;
         margin-bottom: 10px;
+
+        .iconImage {
+          width: 50px;
+          height: 50px;
+          filter: invert(0.5);
+        }
       }
 
       p {
