--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -26,7 +26,7 @@
       color: #fff;
       text-decoration: none;
       font-size: 16px;
-      padding: 10px;
+      padding: 10px 15px;
       position: relative;
       text-align: center;
 
@@ -59,19 +59,14 @@
   }
 
   .signOut {
-    font-size: 16px;
-    color: #fff;
     background-color: transparent;
-    border: 1px solid #fff;
+    border: transparent;
     padding: 5px 10px;
+    margin-left: 15px;
     cursor: pointer;
-    transition:
-      background-color 0.3s,
-      color 0.3s;
 
     &:hover {
-      background-color: #892fb0;
-      color: #fff;
+      background-color: #272727;
     }
   }
 
@@ -84,13 +79,17 @@
     padding: 5px 10px;
     cursor: pointer;
     margin-left: 10px;
-    transition:
-      background-color 0.3s,
-      color 0.3s;
 
     &:hover {
       background-color: #272727;
       color: #fff;
     }
+  }
+
+  img {
+    filter: invert(100%);
+    width: 100%;
+    height: 100%;
+    scale: calc(50%);
   }
 }
