--- a/src/components/header/modals/modal.m.scss
+++ b/src/components/header/modals/modal.m.scss
@@ -17,11 +17,12 @@
   border-radius: 8px;
   position: relative;
   max-width: 500px;
-  width: 90%; /* Responsive width */
+  width: 90%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  box-shadow: 0px px 0px 0px rgba(255, 255, 255, 1);
+  border: 1px solid white;
+  box-shadow: 0px 5px 0px 0px rgba(255, 255, 255, 1);
 }
 
 .modalHeader {
@@ -85,4 +86,10 @@
   &:hover {
     background-color: rgb(85, 2, 85);
   }
+}
+
+.errorMessage {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
 }
