--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 45px;
   background-color: #000;
   color: #fff;
   display: flex;
@@ -17,10 +18,12 @@
     font-weight: bold;
     margin: 0;
     color: #fff;
+    line-height: 45px;
   }
 
   .nav {
     display: flex;
+    align-items: center;
 
     a {
       color: #fff;
@@ -62,7 +65,6 @@
     background-color: transparent;
     border: transparent;
     padding: 5px 10px;
-    margin-left: 15px;
     cursor: pointer;
 
     &:hover {
