--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -12,6 +12,7 @@
   padding: 0 10px;
   box-sizing: border-box;
   z-index: 1;
+  overflow: hidden;
 
   .title {
     font-size: 24px;
@@ -29,7 +30,7 @@
       color: #fff;
       text-decoration: none;
       font-size: 16px;
-      padding: 10px 15px;
+      padding: 10px;
       position: relative;
       text-align: center;
 
@@ -66,6 +67,7 @@
     border: transparent;
     padding: 5px 10px;
     cursor: pointer;
+    height: 45px;
 
     &:hover {
       background-color: #272727;
@@ -81,6 +83,7 @@
     padding: 5px 10px;
     cursor: pointer;
     margin-left: 10px;
+    height: 45px;
 
     &:hover {
       background-color: #272727;
@@ -92,6 +95,6 @@
     filter: invert(100%);
     width: 100%;
     height: 100%;
-    scale: calc(50%);
+    scale: calc(60%);
   }
 }
