--- a/src/elements/inputText.m.scss
+++ b/src/elements/inputText.m.scss
@@ -1,3 +1,11 @@
+.error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  width: 100%;
+  text-align: left;
+}
+
 .formGroup {
   display: flex;
   align-items: flex-start;
@@ -5,10 +13,21 @@
   margin-bottom: 15px;
   width: 100%;
   flex-wrap: wrap;
+  position: relative;
 
   @media (max-width: 480px) {
     flex-direction: column;
     align-items: stretch;
+  }
+
+  .error {
+    position: absolute;
+    bottom: -18px;
+    left: 0;
+    width: 100%;
+    text-align: left;
+    color: red;
+    font-size: 12px;
   }
 }
 
@@ -64,14 +83,6 @@
   object-fit: contain;
   pointer-events: none;
   filter: invert(100%);
-}
-
-.error {
-  color: red;
-  font-size: 12px;
-  margin-top: 5px;
-  width: 100%;
-  text-align: left;
 }
 
 .modalOverlay {
