--- a/src/components/pages/profile/profile.m.scss
+++ b/src/components/pages/profile/profile.m.scss
@@ -16,11 +16,20 @@
   }
 }
 
+.profileForm {
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .container {
   display: flex;
   margin: 0 auto;
   justify-content: space-evenly;
   flex-direction: row;
+  align-items: center;
 }
 
 .row {
@@ -50,6 +59,7 @@
   .imgBtn {
     background-color: #6a0dad;
     font-style: bold;
+    font-size: 16px;
     color: white;
     width: 300px;
     padding: 10px 15px;
@@ -64,15 +74,16 @@
 }
 
 p {
-  margin-bottom: -3px;
+  margin-left: 0px;
   font-size: 14px;
+  font-weight: bold;
 }
 
 .squareInput {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 0; /* Square corners */
+  border-radius: 0;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   font-size: 14px;
@@ -95,11 +106,6 @@ p {
     .error {
       color: #ff4d4f;
       font-size: 12px;
-    }
-
-    p {
-      margin: 0 0 5px;
-      font-size: 16px;
     }
 
     input {
@@ -126,7 +132,6 @@ p {
   gap: 10px;
 
   button {
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -142,6 +147,8 @@ p {
     }
 
     &.changePasswordButton {
+      font-weight: bold;
+      padding: 15px 25px;
       background-color: #6a0dad;
       color: white;
 
@@ -150,4 +157,62 @@ p {
       }
     }
   }
+}
+
+.inputControl {
+  border-radius: 0px;
+  margin: 5px 0;
+  width: 250px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  background: rgba(255, 255, 255, 0);
+  color: white;
+  outline: none;
+
+  &:focus {
+    border-color: #6a0dad;
+    box-shadow: 0 0 5px rgba(106, 13, 173, 0.5);
+  }
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .wup-errorText {
+    color: #ff4d4f;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+}
+
+.textareaControl {
+  border-radius: 0px;
+  margin: 5px 0;
+  width: 100%;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  background: rgba(255, 255, 255, 0);
+  color: white;
+  outline: none;
+
+  &:focus {
+    border-color: #6a0dad;
+    box-shadow: 0 0 5px rgba(106, 13, 173, 0.5);
+  }
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .wup-errorText {
+    color: #ff4d4f;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+}
+
+.successMessage {
+  color: #4caf50;
+  font-size: 14px;
+  margin-top: 10px;
 }
