--- a/src/components/pages/product/productSection.module.scss
+++ b/src/components/pages/product/productSection.module.scss
@@ -16,8 +16,9 @@
     }
 
     .gamesContainer {
-      padding: 10px;
       display: flex;
+      flex-wrap: wrap;
+      padding: 10px;
       gap: 15px;
     }
   }
